--- a/public/css/login.css
+++ b/public/css/login.css
@@ -61,7 +61,7 @@ body {
   font-size: 12px;
 }
 
-.login-box form a {
+.login-box form button {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
@@ -74,20 +74,22 @@ body {
   transition: 0.5s;
   margin-top: 40px;
   letter-spacing: 3px;
+  background-color: transparent;
+  border: none;
 }
 
-.login-box a:hover {
+.login-box button:hover {
   background: #fff;
   color: #272727;
   border-radius: 5px;
 }
 
-.login-box a span {
+.login-box button span {
   position: absolute;
   display: block;
 }
 
-.login-box a span:nth-child(1) {
+.login-box button span:nth-child(1) {
   top: 0;
   left: -100%;
   width: 100%;
@@ -107,7 +109,7 @@ body {
   }
 }
 
-.login-box a span:nth-child(2) {
+.login-box button span:nth-child(2) {
   top: -100%;
   right: 0;
   width: 2px;
@@ -128,7 +130,7 @@ body {
   }
 }
 
-.login-box a span:nth-child(3) {
+.login-box button span:nth-child(3) {
   bottom: 0;
   right: -100%;
   width: 100%;
@@ -149,7 +151,7 @@ body {
   }
 }
 
-.login-box a span:nth-child(4) {
+.login-box button span:nth-child(4) {
   bottom: -100%;
   left: 0;
   width: 2px;
@@ -175,12 +177,12 @@ body {
   font-size: 14px;
 }
 
-.login-box a.a2 {
+.login-box button.a2 {
   color: #fff;
   text-decoration: none;
 }
 
-.login-box a.a2:hover {
+.login-box button.a2:hover {
   background: transparent;
   color: #aaa;
   border-radius: 5px;
