--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,5 @@
 body {
-  background-image:url(/images/bg-login.jpg);
+  background-image:url('../images/bg-login.jpg');
   height: 100vh;
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.432);
