--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@
 
 /* navbar */
 #logo .row {
-  background-image: url(/images/bg-header.png);
+  background-image: url('../images/bg-header.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -136,5 +136,5 @@ a {
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.432);
   background-blend-mode: multiply;
-  background-image: url(/images/bg-dashboard.jpg);
+  background-image: url('../images/bg-dashboard.jpg');
 }
